Fix parsing error in auto-comment.yml

--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -14,10 +14,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Create a bin directory in the runner's home
+    - name: Create bin directory
+      run: mkdir -p $HOME/bin
+
     # Install the latest jq from GitHub releases
     - name: Install jq
       run: |
-        jq_latest=$(curl --silent "https://api.github.com/repos/stedolan/jq/releases/latest" | jq -r '.assets[].browser_download_url | select(endswith("jq-linux64"))')
+        jq_latest=$(curl --silent -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/stedolan/jq/releases/latest" | jq -r '.assets[].browser_download_url | select(endswith("jq-linux64"))')
         wget $jq_latest -O $HOME/bin/jq
         chmod +x $HOME/bin/jq
 
@@ -28,7 +32,7 @@ jobs:
     # Install the latest yq from GitHub releases
     - name: Install yq
       run: |
-        yq_latest=$(curl --silent "https://api.github.com/repos/mikefarah/yq/releases/latest" | jq -r '.assets[].browser_download_url | select(endswith("yq_linux_amd64"))')
+        yq_latest=$(curl --silent -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/mikefarah/yq/releases/latest" | jq -r '.assets[].browser_download_url | select(endswith("yq_linux_amd64"))')
         wget $yq_latest -O $HOME/bin/yq
         chmod +x $HOME/bin/yq
         
